--- a/charts/values-vsphere.yaml
+++ b/charts/values-vsphere.yaml
@@ -92,7 +92,7 @@ nodepools:
   datacenter: "rancherdc"
 
   # vSphere datastore for virtual machine
-  # datastore: ""
+  datastore: "datastore1"
 
   # vSphere datastore cluster for virtual machine
   # datastoreCluster: ""
@@ -101,16 +101,16 @@ nodepools:
   diskSize: "20480"
 
   # vSphere folder for the docker VM. This folder must already exist in the datacenter
-  # folder: ""
+  folder: "rancherdc/vm/molmedo-vm-folder"
 
   # vSphere compute resource where the docker VM will be instantiated. This can be omitted if using a cluster with DRS
   # hostsystem: ""
 
   # vSphere size of memory for docker VM (in MB)
-  # memorySize: "2048"
+  memorySize: "2048"
 
   # vSphere network where the virtual machine will be attached
-  # network: ""
+  network: /rancherdc/network/VM Network
 
   # vSphere resource pool for docker VM
   # pool: ""
