--- a/index.yaml
+++ b/index.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 entries:
   cluster-template:
-  - annotations:
-      catalog.cattle.io/namespace: fleet-default
-      catalog.cattle.io/type: cluster-template
+  #- annotations:
+  #    catalog.cattle.io/namespace: fleet-default
+  #    catalog.cattle.io/type: cluster-template
     apiVersion: v1
     created: "2022-02-25T15:54:51.604663-08:00"
     description: Cluster template for rke2
