--- a/charts/Chart.yaml
+++ b/charts/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 name: cluster-template
-description: Cluster template for rke2 noannotations-indexfile
+description: Cluster template for rke2 noannotations-indexfileforkedranchercharts
 version: 0.0.1
 annotations:
   catalog.cattle.io/type: cluster-template
